--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongo-sanitize": "^1.1.0",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.2"
   },
